<?xml version="1.0"?>
<package format="2">
  <name>lewansoulxarm</name>
  <version>0.0.0</version>
  <description>The lewansoul xArm package</description>
  <maintainer email="riotsquad@microsoft.com">Azure Edge Robotics</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
